abstract interface class Response<T> {
  List<T> get results;
}
